Fix RTL: flex-start for right alignment in row direction

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -766,7 +766,7 @@
 }
 
 [dir="rtl"] .feature-list {
-  justify-content: flex-end;
+  justify-content: flex-start;
   padding: 0 !important;
 }
 
@@ -872,7 +872,7 @@
   }
 
   [dir="rtl"] .feature-list {
-    justify-content: flex-end !important;
+    justify-content: flex-start !important;
     padding: 0 !important;
   }
 }
@@ -1486,7 +1486,7 @@
 }
 
 [dir="rtl"] .feature-list {
-  justify-content: flex-end !important;
+  justify-content: flex-start !important;
   padding: 0 !important;
 }
 
